# enbis-2024

./: .env.example  .envrc  .envrc.example  .gitconfig  .gitignore  .tool-versions  LICENSE  Makefile  README.md  dvc.yaml  params-dev.yaml  params.yaml  pyproject.toml
.dvc/: config
data/plugs/: dataset.yaml
docs/libs/: index.md  preprocessing.md  utils.md  visualize.md
docs/stages/: evaluate.md  export.md  index.md  training.md
models/: .gitignore
notebooks/: 00_preparations.ipynb  01_visualize.ipynb  01_visualize_iou.ipynb  02_training.ipynb  03_evaluate.ipynb  03_evaluate_onnx.ipynb  03_inference_api.ipynb  03_test_inference_api.ipynb
scripts/: check-deps.sh
src/: app.py
src/api/: Dockerfile  README.md  predict.py  requirements.txt
src/libs/: preprocessing.py  utils.py  visualize.py
src/stages/: evaluate.py  training.py
