[tool.poetry]
name = "enbis-2024"
version = "0.1.0"
description = ""
authors = ["Mauro Malvestio <mauro@malvestio.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
ultralytics = "^8.0.231"
cffi = "^1.16.0"
sahi = "^0.11.15"
mlflow = "^2.9.2"
botocore = "^1.34.11"
dvc = "^3.37.0"
ipykernel = "^6.28.0"
python-dotenv = "^1.0.0"
nbstripout = "^0.6.1"
gradio = "^4.12.0"
wandb = "^0.16.1"
papermill = "^2.5.0"
fastapi = "^0.108.0"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
prometheus-fastapi-instrumentator = "^6.1.0"
pdoc3 = "^0.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
dvc = "^3.37.0"
nbstripout = "^0.6.1"
pipreqs = "^0.4.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Source" = "https://github.com/pragprogml/enbis-2024"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]
line-length = 120
indent-width = 4
